# questicle

./: .gitignore  .tool-versions  Cargo.toml  Makefile  README.md
editors/vscode/questicle-vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  questicle-vscode-0.0.1.vsix  questicle.questicle-vscode-0.0.1.vsix  tsconfig.json
editors/vscode/questicle-vscode/src/: extension.ts
editors/vscode/questicle-vscode/syntaxes/: questicle.tmLanguage.json
examples/: basics.qk  battle.qk  dialogue.qk  functions_and_closures.qk  hello.qk  host_bridge.qk  inventory.qk  map_list_access.qk  npc_behavior.qk  quests.qk  stdlib.qk  typed.qk
src/: ast.rs  env.rs  eval.rs  eval_tests.rs  format.rs  formatter.rs  host.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_tests.rs  stdlib.rs  token.rs  typecheck.rs  typecheck_tests.rs  value.rs
tests/: examples_run.rs  formatter_basic.rs  formatter_comments.rs  formatter_examples.rs  smoke.rs  typed_lets.rs
